@@ -2,27 +2,29 @@
 # Contributor: Hussam Al-Tayeb <ht990332@gmail.com>
 
 pkgname=openoffice-base-devel
-pkgver=3.2_dev300_m52
+pkgver=3.2_dev300_m54
 pkgrel=1
 pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite"
 arch=('i686' 'x86_64')
-_OO_milestone=DEV300_m52
+_OO_milestone=DEV300_m54
 license=('LGPL3')
 url="http://www.openoffice.org"
 install=openoffice.install
-depends=("curl>=7.19.2" "hunspell>=1.2.8" "python>=2.6.2" 'libwpd' 'redland' 'libxaw' "neon>=0.28.4" 'dbus-glib' "icu>=4.2" 'hsqldb-java' 'libxslt' 'desktop-file-utils')
+depends=("curl>=7.19.2" "hunspell>=1.2.8" "python>=2.6.2" 'libwpd' 'redland' 'libxaw' "neon>=0.28.4"
+	 'dbus-glib' "icu>=4.2" 'hsqldb-java' 'libxslt' 'hicolor-icon-theme' 'desktop-file-utils')
 optdepends=('java-runtime:	adds java support'
             'libcups:		adds printing support'
             'gconf:		adds additional gnome support'
             'nss:		adds support for signed files/macros'
             'pstoedit:		translates PostScript and PDF graphics into other vector formats'
             'poppler:		for shipped pdfimport extension')
-makedepends=('bison' 'subversion' 'curl' 'findutils' 'flex' 'gawk' 'gcc-libs' 'libart-lgpl'
-             'pam' 'sane' 'zip' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.1-2"
-             'apache-ant>=1.7.1-3' 'cairo' 'gperf' 'libcups' 'poppler' 'pstoedit' 'gconf' "openjdk6>=1.5-4") # 'boost'
+makedepends=('bison' 'svn' 'automake' 'findutils' 'flex' 'gawk' 'gcc-libs' 'libart-lgpl' 'libxtst'
+             'pam' 'sane' 'zip' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.1.2"
+             'apache-ant>=1.7.1-3' 'cairo' 'gperf' 'libcups' 'poppler' 'pstoedit' 'gconf' "openjdk6>=1.5-5") # 'boost'
+backup=(usr/lib/openoffice-dev/program/sofficerc )
 provides=('openoffice-base')
 source=(${pkgname}-${_OO_milestone}.tar.gz
-	template.desktop
+	startcenter.desktop
 	default-no-startup-wizard.diff
 	default-system-fpicker.diff
 	soffice-detect-mozilla-certificates.diff
@@ -32,6 +34,16 @@ source=(${pkgname}-${_OO_milestone}.tar.gz
 	openoffice.org-3.0.1.oooXXXXX.extensions.npapi.patch
 	openoffice.profile)
 options=('!distcc' '!ccache' '!makeflags')
+md5sums=('8b98ffb24a6ff673c4076381c84df4e5'
+         '63209bbc64c901ef105455bda0282f45'
+         '71f136a31e296a04ab68932a31dd533e'
+         '6c596129fb48316226ce3adfd3a4c86d'
+         '1dc7480a04f572ad136d35923a2af66d'
+         'bf7119084a2d1e0566b5e34b57dce8eb'
+         'a51200f770c635355c430cc5052db8cf'
+         '863a3ab2c17a3d11b8fa3ec321986366'
+         '75c7e5dd7cf4c266f48565fb6425f8c4'
+         '8d68d44c941a687813ddd968383cdf27')
 
 # see ftp://ftp.linux.cz/pub/localization/OpenOffice.org/devel/build/build for upstream build instructions
 
@@ -64,7 +76,7 @@ build() {
 	patch -Np1 -i ${srcdir}/openoffice.org-3.0.1.oooXXXXX.extensions.npapi.patch || return 1
 	
 	# allows soffice to find the user's firefox profile so that it can read
-	# his digital certificates. Nss stores digital certificates in your mozilla firefox profile. 
+	# its digital certificates. Nss stores digital certificates in your mozilla firefox profile. 
 	patch -Np0 -i ${srcdir}/soffice-detect-mozilla-certificates.diff || return 1
 
 	# important bugfixes
@@ -184,46 +196,45 @@ build() {
 	 else 	cp -R instsetoo_native/unxlngi6.pro/OpenOffice/native/install/en-US/linux-2.6-intel/buildroot/* ${pkgdir}/
 	fi
 
-	cd ${pkgdir}/opt/
+	# move all to /usr/lib
+	mkdir -p ${pkgdir}/usr/lib
+	mv ${pkgdir}/opt/* ${pkgdir}/usr/lib/
+	rmdir ${pkgdir}/opt
+
         ## Step 1 
-        cd ${pkgdir}/opt/openoffice.org || return 1
+        cd ${pkgdir}/usr/lib/openoffice.org || return 1
         mv ure/ basis3.2/ || return 1
         cd basis3.2 || return 1
         rm ure-link && mv ure ure-link || return 1
         ## Step 2
-        cd ${pkgdir}/opt/ || return 1
+        cd ${pkgdir}/usr/lib/ || return 1
         mv openoffice.org/basis3.2/ openoffice.org3/ || return 1
         cd openoffice.org3/ || return 1
         rm basis-link && mv basis3.2 basis-link || return 1
         ## Step 3        
-        cd ${pkgdir}/opt/ || return 1
-        rmdir ${pkgdir}/opt/openoffice.org || return 1
+        cd ${pkgdir}/usr/lib/ || return 1
+        rmdir ${pkgdir}/usr/lib/openoffice.org || return 1
         mv openoffice.org3 openoffice || return 1
+
+       # install all built dictionaries from source tree
+       pushd ${srcdir}/${_OO_milestone}/dictionaries/unxlng?6.pro/bin
+       for i in `ls -1 dict-??.oxt`; do
+         install -D -m644 $i ${pkgdir}/usr/lib/openoffice/share/extension/install/$i || return 1
+       done
+       popd
 
 	# prepare filesystem entries
 	mkdir -p ${pkgdir}/usr/{bin,share/applications}
 	mkdir -p ${pkgdir}/usr/share/icons/{hicolor,locolor}
-
-	# make symlinks
-	cd ${pkgdir}/usr/bin
-	ln -s ../../opt/openoffice/program/soffice soffice
-	ln -s ../../opt/openoffice/program/spadmin spadmin
-
-       # install all built dictionaries from source tree
-       if [ "$CARCH" = "x86_64" ]; then
-              pushd ${srcdir}/${_OO_milestone}/dictionaries/unxlngx6.pro/bin
-         else pushd ${srcdir}/${_OO_milestone}/dictionaries/unxlngi6.pro/bin
-       fi
-       for i in `ls -1 dict-??.oxt`; do
-         install -D -m644 $i ${pkgdir}/opt/openoffice/share/extension/install/$i || return 1
-       done
-       popd
                
 	# install shortcuts
-	mv ${pkgdir}/opt/openoffice/share/xdg/*.desktop  ${pkgdir}/usr/share/applications
+	mv ${pkgdir}/usr/lib/openoffice/share/xdg/*.desktop  ${pkgdir}/usr/share/applications
+	# add startcenter desktop file
+	install -D -m644 ${srcdir}/startcenter.desktop ${pkgdir}/usr/share/applications/startcenter.desktop || return 1
+
 	cd ${pkgdir}/usr/share/applications
-	sed -i -e 's|Exec=openoffice.org3|Exec=/opt/openoffice/program/soffice|g' *.desktop || return 1
-	sed -i -e 's|Exec=/opt/openoffice/program/soffice-printeradmin|Exec=/opt/openoffice/program/spadmin|g' printeradmin.desktop || return 1
+	sed -i -e 's|Exec=openoffice.org3|Exec=/usr/bin/soffice|g' *.desktop || return 1
+	sed -i -e 's|Exec=/usr/bin/soffice-printeradmin|Exec=/usr/bin/spadmin|g' printeradmin.desktop || return 1
 	# fix exec commands in shortcuts for Xfce menu
 	sed -i -e 's|base %U|base|g' base.desktop || return 1
 	sed -i -e 's|calc %U|calc|g' calc.desktop || return 1
@@ -233,10 +244,8 @@ build() {
 	sed -i -e 's|writer %U|writer|g' writer.desktop || return 1
 	# remove quickstarter, we disabled it above
 	rm -rf ${pkgdir}/usr/share/applications/qstart.desktop
-	# fix icons in shortcuts
+	# fix icons in desktop files
 	sed -i -e 's|Icon=openofficeorg3-|Icon=|g' *.desktop
-	# add template desktop file
-	install -D -m644 ${srcdir}/template.desktop ${pkgdir}/usr/share/applications/template.desktop || return 1
 
 	# install icons
 	cd ${srcdir}/${_OO_milestone}/sysui/desktop/icons
@@ -252,16 +261,18 @@ build() {
 	chmod +rX -R ${pkgdir}/usr
 
 	## Develize it!
-	cd ${pkgdir}/opt/
+	cd ${pkgdir}/usr/lib/
 	mv openoffice openoffice-dev
-	sed -i -e 's|Exec=/opt/openoffice/program|Exec=/opt/openoffice-dev/program|g' ${pkgdir}/usr/share/applications/*.desktop || return 1
+
+	sed -i -e 's|Exec=/usr/bin/soffice|Exec=/usr/bin/soffice-dev|g' ${pkgdir}/usr/share/applications/*.desktop
+	sed -i -e 's|Exec=/usr/bin/spadmin|Exec=/usr/bin/spadmin-dev|g' ${pkgdir}/usr/share/applications/printeradmin.desktop
 
 	cd ${pkgdir}/usr/bin
 	rm -f soffice spadmin
-	ln -sf ../../opt/openoffice-dev/program/soffice soffice-dev
-	ln -sf ../../opt/openoffice-dev/program/spadmin spadmin-dev
+	ln -sf /usr/lib/openoffice-dev/program/soffice soffice-dev
+	ln -sf /usr/lib/openoffice-dev/program/spadmin spadmin-dev
+	
 	cd ${pkgdir}/usr/share/applications/
-
 	for desktopz in *.desktop
 	   do mv $desktopz Dev-$desktopz
 	done
@@ -269,12 +280,11 @@ build() {
 	for i in `find ${pkgdir}/usr/share/icons -name '*.png'`  ; do  mv $i `dirname $i`/dev-`basename $i` ; done ;
 	
 	cd ${pkgdir}/usr/share/applications/
-	sed -i -e 's|Icon=|Icon=dev-|g' $startdir/pkg/usr/share/applications/*.desktop || return 1
+	sed -i -e 's|Icon=|Icon=dev-|g' ${pkgdir}/usr/share/applications/*.desktop || return 1
 	sed -i -e 's|OpenOffice\.org\ 3\.2|OpenOffice\.org\ devel|g' ${pkgdir}/usr/share/applications/*.desktop || return 1
-	sed -i -e 's|\/opt\/openoffice\-dev\/program\/soffice|\/usr\/bin\/soffice\-dev|g' ${pkgdir}/usr/share/applications/*.desktop || return 1
 
-	cd ${pkgdir}/opt/openoffice-dev/program/
-	ln -sf /opt/openoffice-dev/program/soffice.bin soffice-dev.bin
+	cd ${pkgdir}/usr/lib/openoffice-dev/program/
+	ln -sf /usr/lib/openoffice-dev/program/soffice.bin soffice-dev.bin
 	
        # set desktop variable to force gtk/gnome vcl usage
        install -m755 -d ${pkgdir}/etc/profile.d
@@ -283,6 +293,6 @@ build() {
 	# link the mozilla-plugin
 	mkdir -p ${pkgdir}/usr/lib/mozilla/plugins/
 	cd ${pkgdir}/usr/lib/mozilla/plugins/
-	ln -v -s /opt/openoffice-dev/program/libnpsoplugin.so . 
+	ln -v -s /usr/lib/openoffice-dev/program/libnpsoplugin.so . 
 	mv ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin.so ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin-dev.so
 }
